# panda-imap

./: .gitignore  AUTHORS  CONTENTS  Makefile  Makefile.am  NEWS  NOTICE  README  configure.ac  imapd.8  mail.m4  ssl.m4  tls.m4
docs/rfc/: README
old/dmail/: dmail.c
old/imapd/: imapd.c
old/mlock/: mlock.c
old/osdep/unix/: env_unix.c  mix.c  mx.c  news.c  ssl_unix.c
src/: *xref*  Makefile.am  auth_ext.c  auth_log.c  auth_md5.c  auth_pla.c  auths.c  big5.c  bsdutime.c  bsdutime.h  c-client.h  ckp_pam.c  cns11643.c  crx_nfs.c  dummy.c  dummy.h  env_unix.c  env_unix.h  fdstring.c  fdstring.h  flocklnx.c  fs_unix.c  ftl_unix.c  gb_12345.c  gb_2312.c  getspnam.c  gr_waitp.c  ibm.c  imapd.c  ip4_unix.c  iso_8859.c  jis_0208.c  jis_0212.c  ksc_5601.c  linkage.c  log_std.c  mail.c  mail.h  misc.h  mix.c  (+20 more)
src/c-client/: mail.h
src/imapd/: imapd.c
src/osdep/unix/: Makefile  mh.c  os_slx.h  ssl_unix.c
src/tmail/: tmail.c
test/: GIVEN_preauth_WHEN_capabilities_THEN_ok  GIVEN_preauth_WHEN_capabilities_THEN_response  GIVEN_selected_WHEN_unselect_THEN_ok  Makefile.am  mtest.c  test.cert  test1.c
